--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,8 +7,11 @@ main:
     url: /talks/    
 
   - title: "Teaching"
-    url: /teaching/    
-          
+    url: /teaching/
+    
+  - title: "Portfolio"
+    url: /portfolio/
+    
   - title: "Blog Posts"
     url: /year-archive/
     
