--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Tunde Ajayi"
-  avatar           : "profile2.jpg"
+  avatar           : "pic2.jpg"
   bio              : "NLP | Conversational AI"
   location         : "Africa"
   employer         :
