--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Africa"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : #"http://yourfullgooglescholarurl.com"
+  googlescholar    : "https://scholar.google.com/citations?user=G-AVO3sAAAAJ&hl=en"
   email            : "tajayi@aimsammi.org"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
