--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Tunde Ajayi"
   avatar           : "profile.jpg"
-  bio              : "Conversational AI (NLP)"
+  bio              : "Conversational AI"
   location         : "Africa"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
