--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ author:
   github           : "tunde99"
   google_plus      :
   keybase          :
-  instagram        :
+  instagram        : "https://www.instagram.com/tunde_o_/"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : "tunde-ajayi-978130b3/"
