--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Tunde Ajayi"
   avatar           : "profile.jpg"
   bio              : "Conversational AI"
-  location         : "Africa"
+  location         : "Ireland"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=G-AVO3sAAAAJ&hl=en"
